# DiamondShield-SentinelAI-v2.0-Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  attack_simulation.py  docker-compose.yml  run_full_test.sh
src/: main.rs
static/: admin.html  challenge.html
