[dependencies]
# ... existing dependencies ...
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1.10"
tokio = { version = "1", features = ["full"] }
dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# NEW: For decoding %20, %27, etc.
urlencoding = "2"
