[package]
name = "diamond_shield"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
# Web & Auth
actix-web = "4.9"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Logic & Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
dashmap = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
